Mon Jul 31 13:53:16 BST 2000  Tony Gale <gale@gtk.org>

        * docs/gtkfaq.sgml docs/gtk-faq.sgml:
	  s/gtk_main_iteration/g_main_iteration/

	  Did this already in change:
		Mon Nov 15 17:17:51 GMT 1999 Tony Gale  <gale@gtk.org>
	  don't know how it got reverted.

2000-07-31  Stanislav Brabec  <utx@penguin.cz>

	* gdk/gdk.c: #ifdef G_ENABLE_DEBUG around gdk_arg_debug_cb and
	gdk_arg_no_debug_cb to fix compilation problem with --disable-debug.

	* gdk/Makefile.am: Link gdk against actually compiled gdk_pixbuf-1.3,
	not gdk_pixbuf.

2000-07-30  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in,po/{sp,sr}.po: Added Serbian files

2000-07-30  Tor Lillqvist  <tml@iki.fi>

	* gdk/Makefile.am: Add makefile.mingw.in to EXTRA_DIST.

	* gdk/win32/gdkevents-win32.c (gdk_events_init, gdk_events_queue):
	Remove the g_pipe_readable_msg stuff. Not needed with new GLib
	GIOChannel implementation.

	* gdk/win32/gdkinput.c
	* gdk/win32/gdkpango-win32.c: Update license name here, too.

	* gdk/win32/gdkwin32id.c (gdk_win32_handle_table_lookup): Fix
	definition to match prototype.

	* gtk/makefile.mingw.in: Add libiconv CFLAGS and LIBS.

2000-07-27  Elliot Lee  <sopwith@redhat.com>

	* gtk/gdk-pixbuf-loader.[ch]: Add gdk_pixbuf_loader_new_with_type
	function, to allow handling image formats that cannot be detected
	by looking at content alone.

Thu Jul 27 13:13:21 BST 2000  Tony Gale <gale@gtk.org>

	* docs/tutorial/*.gif *.jpg *.eps
	  Update these to the same look-n-feel.
	  Why does including images in DocBook suck so badly?

Thu Jul 27 05:06:29 2000  Tim Janik  <timj@gtk.org>

        * gtk/gtktable.c: applied patch from Phil Thompson
        <phil@river-bank.demon.co.uk> that enables space settings for
        the last row/columns as well.

Wed Jul 26 12:59:31 2000  Tim Janik  <timj@gtk.org>

        * *.[hc]: applied patch from Andreas Persenius <ndap@swipnet.se> that
        updates the license headers to the GNU Lesser General Public License,