@@ -32,6 +32,7 @@ NONE:POINTER,UINT,UINT
 NONE:POINTER,UINT,UINT
 NONE:STRING
 NONE:STRING,INT,POINTER
+NONE:STRING,POINTER
 NONE:UINT
 NONE:UINT,POINTER,UINT,ENUM,ENUM,POINTER
 NONE:UINT,POINTER,UINT,UINT,ENUM
